Update README and Dockerfiles to use npm install instead of npm ci; add instructions for creating package-lock.json files for production builds.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,7 @@ RUN apk add --no-cache wget
 COPY package*.json ./
 
 # Встановити залежності (включаючи dev для скриптів)
-RUN npm ci
+RUN npm install
 
 # Копіювати код
 COPY . .
