--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -25,6 +25,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        # Важливо для cookies та сесій
+        proxy_cookie_path / /;
+        proxy_cookie_flags ~ httponly samesite=lax secure;
         proxy_cache_bypass $http_upgrade;
     }
 
