--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -30,6 +30,11 @@ server {
         # Важливо для cookies та сесій
         proxy_cookie_path / /;
         proxy_cookie_flags ~ httponly samesite=lax secure;
+        # Передавати всі headers від backend
+        proxy_pass_header Set-Cookie;
+        proxy_hide_header X-Powered-By;
+        # Не буферизувати response
+        proxy_buffering off;
         proxy_cache_bypass $http_upgrade;
     }
 
