--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -28,10 +28,10 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
         # Важливо для cookies та сесій
-        proxy_cookie_path / /;
-        proxy_cookie_flags ~ httponly samesite=lax secure;
-        # Передавати всі headers від backend
+        # Передавати всі headers від backend включаючи Set-Cookie
         proxy_pass_header Set-Cookie;
+        # Не змінювати шлях cookies
+        proxy_cookie_path / /;
         proxy_hide_header X-Powered-By;
         # Не буферизувати response
         proxy_buffering off;
